Fixed centering of product images on mobile for Country Kitchen page

--- a/htdocs/prod/web/assets/css/styles.css
+++ b/htdocs/prod/web/assets/css/styles.css
@@ -6865,7 +6865,8 @@ height: 210px;
     max-height: 200px; }
   .ck-products .img-block {
     width: 200px;
-    height: 200px; }
+    height: 200px;
+    margin: 0 auto; }
   .ck-products .img-block p {
 	  text-align: left;
   }
